# py-agno-ai-workflow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  agent_os.py  app.py  docker-compose.yml  pyproject.toml  skills-lock.json
agents/: audit_writer_agent.py  ingest_agent.py  mapper_agent.py  mapping_pipeline.py  pre_processor.py  translator_agent.py  validator_agent.py
data/: test_100_ambiguous.xlsx  test_100_autodetect.xlsx  test_100_autodetect_corrected_20260501_201059.xlsx  test_anomalies.xlsx  valid_categories.csv
docs/: 00-onboarding-guide.md  02-project-structure.md  03-market-research.md  04-agent-orchestration-and-project-design.md  05-agno-sdk-reference.md  06-stack-and-dependencies.md  07-implementation-and-validation-strategy.md  08-business-context-and-human-in-the-loop.md  09-documentation-audit-v2-improved.md  09-pipeline-plan-all-4-agents.md  10-chainlit-ui-and-demo-flow.md  11-project-orientation-guide.md  agent-orchestration.md  agent-persona.md  agno-core-concepts.md  agno-sdk-reference.md  agno-summary.md  ai-github-portfolio-gaps.html  business-context.md  chainlit-ui.md  checkpoint-portfolio-upgrade.md  docker-deploy-explainer.md  implementation-strategy.md  mermaid-diagram.md  onboarding.md  plan-app-py-per-agent-steps.xml  plan-option-c-pre-translation.xml  plan-ux-column-autodetect.xml  project-structure.md  stack.md
domain/: onet.py
scripts/: audit_collisions.py  audit_needs_review.py  build_valid_categories.py  dev.ps1  generate_test_files.py  inspect_last_run.py  repro_pipeline.py
(+41 files in other folders)
