[project]
name = "py-agno-ai-workflow"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "agno>=1.0",
    "openai",
    "pydantic>=2.0",
    "fastapi",
    "uvicorn",
    "chainlit",
    "pandas",
    "openpyxl",
    "rapidfuzz",
    "duckdb",
    "sqlalchemy",
    "psycopg[binary]",
    "aiosqlite",
    "python-dotenv",
    "groq>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "real_llm: marks tests that make live LLM calls (deselect with -m 'not real_llm')",
]
